# library-management-system

./: Doxyfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-tests.yml
src/: main.py
src/api/: library_api.py
src/auth/: authentication.py
src/database/: database_manager.py
src/models/: book.py  reservation.py  user.py
src/ui/console/: main_menu.py
src/ui/web/: app.py
src/ui/web/templates/: index.html
tests/: conftest.py  init.py  test_api.py  test_database.py  test_lab7.py  test_models.py
